Spartamax Maximum Performance_files/sm-base.css
/* ... */
.title {
  background-color: #aa3815;
  margin: -12px;
  border-radius: 20px 20px 0 0;
  height: 49px;
  color: #fff;
  text-transform: uppercase;
  font-size: 1.4rem;
  padding: 10px 0 0;
  letter-spacing: 1px;
}
.bottles-count {
  font-size: 2.4rem;
  font-weight: 800;
  margin: 22px auto -4px;
  color: #394d9d;
  letter-spacing: -1px;
}


/* FREE BONUS..  FREE SHIPPING  */
/* *** BUTTONS  *** */
.atc-button {
  font-size: 2.4rem;
  line-height: 1;
  font-weight: 800;
  color: #fff;
  background-color: orange;
  padding: 9px 19px 6px;
  border-radius: 50px;
  display: inline-block;
  margin: 6px;
  border: 0px solid #ffc823;
  background: linear-gradient(to bottom, rgb(249, 209, 132) 0%,rgb(237,144,23) 100%);
}
.atc-button:hover {
background: linear-gradient(to bottom, rgb(237,144,23) 0%,rgb(249, 203, 132) 100%);
border-top: 1px solid #fff;
}
.buyOpt {
  margin: 7px auto 18px;
}
.bOpt {
  background-size: contain;
  margin:2px 7% -3px !important;
  font-weight: 600;
  color: #fff;
  line-height: 2 !important;
  background-repeat: no-repeat;
  text-align: left;
  padding:2px 0 6px 50px;
}
.o-plus {
  background-image: url("./ebook-blueprint.jpg");
}
.o-support {
  background-image: url("./arginine.jpg");
}
.o-books {
  background-image: url("./grapeseed.jpg");
}
.o-ship {
  background-image: url("./beetroot.jpg");
}

.payCard img {
  max-width: 250px;
  margin:4px auto 6px;
}
.noRisk img {
  max-width: 230px;
  margin:6px auto 2px;
  padding-bottom: 20px;
}

.atc-button {
  font-size: 2.4rem;
  line-height: 1;
  font-weight: 800;
  color: #fff;
  padding: 11px 24px;
  border-radius: 50px;
  display: inline-block;
  margin:-3px 6px 12px;
  border:0px solid #ffc823;
  background:linear-gradient(to bottom, rgb(249, 209, 132) 0%,rgb(237,144,23) 100%);
  box-shadow: 0px 3px 8px #0000008c;
}
.smlBttn {
  max-width: 230px !important;
}






/* tooltip  */ 

.title .tooltip {
  font-size: 1rem;
  float: right;
  margin: 0 16px 0 -16%;
  background-color: #09060661;
  border-radius: 50%;
  padding: 2px 10px;
  opacity: inherit;
  cursor: pointer;
}
.title .tooltip .tooltip__text {
  background-color: rgba(61, 68, 95, 0.9);
  color: #fff;
  text-align: center;
  text-transform: initial;
  border-radius: 6px;
  padding: 11px 10px;
  position: absolute;
  font-size: 13px;
  line-height: 1.2;
  min-width: 180px;
  z-index: 1;
  top: 4%;
  left: 50%;
  margin-left: -20px;
  cursor: pointer;
  visibility: hidden;
}
.title .tooltip:hover .tooltip__text {
  visibility: visible;
}

/*   */
.guarantee-img {
  text-align: center;
}
.guarantee-img p {
  padding-top: 24px;
  margin-bottom: -8px;
  color: #777;
  font-size: 1rem;
}
.guarantee-img img {
  display: initial;
  max-width: 460px;
  height: 100% !important;
  margin-top: 16px;
  width: 88%;
}
.groupof5 {
  max-width: 850px;
  width: 80%;
  margin: 0 auto;
}
.extra-text {
  font-weight: 800;
  color: #737373;
  margin: 12px 0 9px;
}
.extra-text del {
  color: #d96060;
}
.extra-text b {
  color: #4b4b4b;
}
.bonusTxt {
  margin:5px 0 14px;
  font-size: 1.1rem;
  padding:0 0 19px;
}
.pay-only {
  font-size: 1rem;
  padding: 0;
  margin: -8px 0 14px;
  color: red;
}

a.sixbtl.btn-rollover {
  background-image: url(../imgs/btn-buyNow3.png);
  display: block;
  height: 96px;
  background-size: 636px;
  width: 293px;
  margin: -6px 16% -8px 40px;
  overflow: visible;
  color: transparent;
  cursor: pointer !important;
}
.sixbtl.btn-rollover:hover {
  background-position-x: -339px;
}
.guarantee-180 {
  width: 100%;
  max-width: 280px !important;
  rotate: -12deg;
  margin: -50px 20px -6px 0;
}
.guarTxt {
  margin: 0 0 0 22px;
}
.guarTxt h1 {
  font-size: 3.4rem;
  line-height: 1;
  padding:0 0 4px 0;
  color: #b30000;
  margin-left: -2px;
  font-weight: 800 !important;
  letter-spacing: -2px;
}
.guarTxt p {
  font-size: 1.45rem;
  line-height: 1.2;
}
.claimHdr {
  line-height: 1;
  font-size: 2.9rem;
}

.bottlesx3-img {
  max-width: 550px !important;
  margin:-46px -40px -64px -110px;
  /* height: 510px; */
}
.introHead {color: #b30000;
  font-size: 4.3rem !important;
  line-height: 0.9;
  margin-bottom: 20px !important;
}

/*  ****  accordion  **** */
.accordion-item {
  border: 0 !important;
  /* border-top: 1px dotted !important; */
  margin: 12px;
  font-size: 1.4rem;
  line-height: 1.2;
}
.accordion-button {
  font-size: 1.4rem !important;
  color: #555 !important;
  font-weight: 500;
  background-color: #86868670 !important;
  margin:0 0 -6px;
  padding:10px 24px !important;
  border-radius:0 0 6px 6px !important;
  border-top:1px solid #444;
}
}
.accordion-body {
  margin: -20px 0 0 4px;
  font-weight: 400;
}
.accordion-button:focus {
  box-shadow: none !important;
}










@media (max-width: 560px) {
	.biggerM {
    font-size: 2.7rem !important;
    line-height: 1 !important;
  	}
	.heroPrdct img {
		/* max-width: 401px !important; */
		margin:-100px auto -24px 0px !important;
	}
	.hero-hd {
		font-size: 2.6rem;
		font-weight: 400;
		line-height: 1;
		margin:0px auto 16px !important;
		padding:0 3%;
	}
	.assuranceLabel {
		margin:	0 auto;
		width: 100%;
		max-width: 336px !important;
		float: none;
	}
	.pnlIntro img {
		width: 370px;
		margin:-84px auto 0 -68px;
	}

	.col-12.col-lg-3.proIng {
		margin: 0 1% 40px !important;
	}
	.hero-hd-lng {
		font-size: 2.5rem !important;
		line-height: 1.1;
		margin: 0px 12px;
	}

  @media (max-width: 560px) {
  .atc-box {
    display: flex;
    width: 99%;
    flex-direction: column;
  }
  .singleBot {
  order: 4;
  }

}


  }

  @media (min-width: 992px) {
.col-lg-3 {
  width: 23% !important;
}
  }


.py-3.spacerPrice {
  padding: 0 0 6px 0 !important;
}

@media (min-width: 992px) {
.col-lg-4 {
  flex: 0 0 auto;
  width: 31.333%;;
}
}

.logoBW.doctor-img {
  max-width: 476px;
  width: 100%;
  -webkit-animation-duration: 4s;
  -webkit-animation-delay: 5s;
  margin-bottom: -40px;
}
/* ... */

